--- a/index.html
+++ b/index.html
@@ -1,11 +1,143 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 <head>
-	<title>freeland</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>CSS3六边形图片网格布局DEMO演示</title>
+<link rel="stylesheet" type="text/css" href="css/hexagons.css">
 </head>
 <body>
-<h1>
-	Hello,I am heiqie,this is my second web page
-</h1>
+<div style="text-align:center;clear:both;"> </div>
+<ul id="hexGrid">
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/1.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/2.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/3.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/4.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/5.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/6.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/7.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/8.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/1.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/2.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/3.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/4.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/5.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/6.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/7.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/8.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/1.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/2.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/3.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/4.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/5.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/6.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/7.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/8.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/1.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/2.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/3.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/4.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/5.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/6.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/7.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/8.png" alt="" />
+    <h1>This is a title</h1>
+    <p>Some sample text about the article this hexagon leads to</p>
+    </a> </li>
+</ul>
 </body>
 </html>
