--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CSS3六边形图片网格布局DEMO演示</title>
+<title>Freeland</title>
 <link rel="stylesheet" type="text/css" href="css/hexagons.css">
 </head>
 <body>
