--- a/index.html
+++ b/index.html
@@ -106,19 +106,19 @@
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/1.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/1.jpeg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/2.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/2.jpeg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/3.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/3.jpeg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/4.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/4.jpeg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
