--- a/index.html
+++ b/index.html
@@ -107,20 +107,20 @@
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
   <li class="hex"> <a class="hexIn" href="#"> <img src="img/1.jpeg" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
+    <h1>迷离的眼神</h1>
+    <p>每次看到这张图片,有种里面定飞机票飞到你那边的冲动~~</p>
     </a> </li>
   <li class="hex"> <a class="hexIn" href="#"> <img src="img/2.jpeg" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
+    <h1>假发第一弹</h1>
+    <p>第一次看你戴假发的感觉----唯美~</p>
     </a> </li>
   <li class="hex"> <a class="hexIn" href="#"> <img src="img/3.jpeg" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
+    <h1>卖卖卖~~萌萌萌</h1>
+    <p>这是要吻我的节奏么~~</p>
     </a> </li>
   <li class="hex"> <a class="hexIn" href="#"> <img src="img/4.jpeg" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
+    <h1>电影院~也要自拍</h1>
+    <p>你还能记得这是什么时候，在哪个电影院吗？</p>
     </a> </li>
   <li class="hex"> <a class="hexIn" href="#"> <img src="img/5.png" alt="" />
     <h1>This is a title</h1>
