--- a/demo.html
+++ b/demo.html
@@ -60,7 +60,7 @@
 		font-size: 20px;
 	}
   </style> 
-  <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
+  <script src="js/jquery-3.1.1.min.js"></script>
  </head> 
  <body> 
   <div id="container" style="height:520px;"> 
