--- a/index.html
+++ b/index.html
@@ -1,143 +1,105 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh">
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Freeland</title>
-<link rel="stylesheet" type="text/css" href="css/hexagons.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>抽屉式滑动侧边栏</title>
+
+	<link rel="stylesheet" type="text/css" href="css/nav.css">
+	<script src="js/prefixfree.min.js"></script>
+	<!--[if IE]>
+		<script src="http://www.jq22.com/jquery/html5.min.js"></script>
+	<![endif]-->
 </head>
 <body>
-<div style="text-align:center;clear:both;"> </div>
-<ul id="hexGrid">
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/1.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/2.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/3.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/4.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/5.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/6.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/7.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/8.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/1.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/2.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/3.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/4.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/5.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/6.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/7.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/8.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/1.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/2.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/3.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/4.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/5.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/6.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/7.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/8.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/1.jpeg" alt="" />
-    <h1>迷离的眼神</h1>
-    <p>每次看到这张图片,有种里面定飞机票飞到你那边的冲动~~</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/2.jpeg" alt="" />
-    <h1>假发第一弹</h1>
-    <p>第一次看你戴假发的感觉----唯美~</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/3.jpeg" alt="" />
-    <h1>卖卖卖~~萌萌萌</h1>
-    <p>这是要吻我的节奏么~~</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/4.jpeg" alt="" />
-    <h1>电影院~也要自拍</h1>
-    <p>你还能记得这是什么时候，在哪个电影院吗？</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/5.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/6.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/7.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/8.png" alt="" />
-    <h1>This is a title</h1>
-    <p>Some sample text about the article this hexagon leads to</p>
-    </a> </li>
-</ul>
+	<ul class="drawer">
+	  <li>
+	    <a href="#">
+	      <i class="fa fa-info-circle"></i>
+	      <span>Freeland</span>
+	    </a>
+	    <ul>
+	      <li>
+	        <a href="index.html" target="_blank">
+	          <i class="fa fa-folder-open"></i>
+	          <span>首页</span>
+	        </a>
+	      </li>
+	      <li>
+	        <a href="writeme.html" target="_blank">
+	          <i class="fa fa-question-circle"></i>
+	          <span>便签</span>
+	        </a>
+	      </li>
+	      <li>
+	        <a href="life.html" target="_blank">
+	          <i class="fa fa-phone-square"></i>
+	          <span>我的生活</span>
+	        </a>
+	      </li>
+	    </ul>
+	  </li>
+	  <li>
+	    <a href="#">
+	      <i class="fa fa-folder"></i>
+	      <span>项目</span>
+	    </a>
+	    <ul>
+	      <li>
+	        <a href="#" target="_blank">
+	          <i class="fa fa-flash"></i>
+	          <span>Hover.css</span>
+	        </a>
+	      </li>
+	      <li>
+	        <a href="#" target="_blank">
+	          <i class="fa fa-ellipsis-h"></i>
+	          <span>Sequence.js</span>
+	        </a>
+	      </li>
+	      <li>
+	        <a href="#" target="_blank">
+	          <i class="fa fa-dot-circle-o"></i>
+	          <span>jQuery Parallax</span>
+	        </a>
+	      </li>
+	    </ul>
+	  </li>
+	  <li>
+	    <a href="#">
+	      <i class="fa fa-share-alt"></i>
+	      <span>社会</span>
+	    </a>
+	    <ul>
+	      <li>
+	        <a href="#" target="_blank">
+	          <i class="fa fa-codepen"></i>
+	          <span>CodePen</span>
+	        </a>
+	      </li>
+	      <li>
+	        <a href="#" target="_blank">
+	          <i class="fa fa-twitter"></i>
+	          <span>Twitter</span>
+	        </a>
+	      </li>
+	      <li>
+	        <a href="#" target="_blank">
+	          <i class="fa fa-github"></i>
+	          <span>GitHub</span>
+	        </a>
+	      </li>
+	      <li>
+	        <a href="#" target="_blank">
+	          <i class="fa fa-globe"></i>
+	          <span>Web</span>
+	        </a>
+	      </li>
+	    </ul>
+	  </li>
+	</ul>
+	
+	
 </body>
 </html>
