add wind to project

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<ul class="drawer">
 	  <li>
-	    <a href="#">
+	    <a href="wind.html">
 	      <i class="fa fa-info-circle"></i>
 	      <span>Freeland</span>
 	    </a>
