--- a/wind.html
+++ b/wind.html
@@ -6,7 +6,7 @@
 
 <link href="css/style.css" type="text/css"  rel="stylesheet" />
 
-<script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
+<script src="js/jquery-3.1.1.min.js"></script>
 
 </head>
 <body>
