--- a/wind.html
+++ b/wind.html
@@ -14,37 +14,38 @@
 <div class="flash4" style="margin-top: 50px">
 	<ul>
     	<li class="first">
-        	<div class="imgTop"><img src="img/ruili_img1.jpg" width="538" height="405"  alt="" class="tm"/></div>
+        	<div class="imgTop"><img src="img/yanzi17.jpg" width="300" height="405"  alt="" class="tm"/></div>
             <div class="imgCen">做一个时尚达人</div>
             <div class="imgBot"><a href="life.html"><p class="bt_1">关于我</p><p class="bt_2"><span>walking toward freeland</span></p></a></div>
         </li>
         <li>
-        	<div class="imgTop"><img src="img/ruili_img2.jpg" width="538" height="405"  alt=""/></div>
+        	<div class="imgTop"><img src="img/yanzi13.jpg" width="300" height="405"  alt=""/></div>
             <div class="imgCen">做一个时尚达人</div>
             <div class="imgBot"><a href="writeme.html"><p class="bt_1">冥想</p><p class="bt_2"><span>walking toward freeland</span></p></a></div>
         </li>
         <li>
-        	<div class="imgTop"><img src="img/ruili_img3.jpg" width="538" height="405"  alt=""/></div>
+        	<div class="imgTop"><img src="img/yanzi15.jpg" width="300" height="405"  alt=""/></div>
             <div class="imgCen">做一个时尚达人</div>
             <div class="imgBot"><a href="index.html"><p class="bt_1">爱情</p><p class="bt_2"><span>walking toward freeland</span></p></a></div>
         </li>
         <li>
-        	<div class="imgTop"><img src="img/ruili_img4.jpg" width="538" height="405"  alt=""/></div>
+        	<div class="imgTop"><img src="img/yanzi16.jpg" width="300" height="405"  alt=""/></div>
             <div class="imgCen">做一个时尚达人</div>
             <div class="imgBot"><a href="life.html"><p class="bt_1">幻想</p><p class="bt_2"><span>walking toward freeland</span></p></a></div>
         </li>
         <li>
-        	<div class="imgTop"><img src="img/ruili_img5.jpg" width="538" height="405"  alt=""/></div>
+        	<div class="imgTop"><img src="img/yanzi11.jpg" width="300" height="405"  alt=""/></div>
             <div class="imgCen">做一个时尚达人</div>
             <div class="imgBot"><a href="writeme.html"><p class="bt_1">脑洞</p><p class="bt_2"><span>walking toward freeland</span></p></a></div>
         </li>
         <li>
-        	<div class="imgTop"><img src="img/ruili_img6.jpg" width="538" height="405"  alt=""/></div>
+        	<div class="imgTop"><img src="img/yanzi18.jpg" width="300" height="405"  alt=""/></div>
             <div class="imgCen">做一个时尚达人</div>
             <div class="imgBot"><a href="index.html"><p class="bt_1">挑战</p><p class="bt_2"><span>walking toward freeland</span></p></a></div>
         </li>
+        
         <li class="fast">
-        	<div class="imgTop"><img src="img/ruili_img7.jpg" width="538" height="405"  alt=""/></div>
+        	<div class="imgTop"><img src="img/yanzi19.jpg" width="300" height="405"  alt=""/></div>
             <div class="imgCen">做一个时尚达人</div>
             <div class="imgBot"><a href="life.html"><p class="bt_1">生活</p><p class="bt_2"><span>walking toward freeland</span></p></a></div>
         </li>
