--- a/life.html
+++ b/life.html
@@ -10,91 +10,91 @@
 <body>
 <div style="text-align:center;clear:both;"> </div>
 <ul id="hexGrid">
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/1.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi1.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/2.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi4.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/3.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi3.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/4.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi5.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/5.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi6.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/6.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi6.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/7.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi7.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/8.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi8.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/1.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi9.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/2.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi10.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/3.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi11.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/4.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi12.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/5.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi13.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/6.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi14.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/7.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi15.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/8.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi16.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/1.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi17.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/2.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi18.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/3.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi19.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/4.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi20.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/5.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi21.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
-  <li class="hex"> <a class="hexIn" href="#"> <img src="img/6.png" alt="" />
+  <li class="hex"> <a class="hexIn" href="#"> <img src="img/yanzi8.jpg" alt="" />
     <h1>This is a title</h1>
     <p>Some sample text about the article this hexagon leads to</p>
     </a> </li>
